# SplitChain

./: ARCHITECTURE.md  README.md  app.js  index.html  package-lock.json  server.js
.github/workflows/: deploy.yml
contracts/SplitChain_escrow/: Cargo.toml
contracts/SplitChain_escrow/src/: lib.rs
contracts/SplitChain_escrow/tests/: integration_test.rs
contracts/splitx_escrow/: Cargo.toml
contracts/splitx_escrow/src/: lib.rs
contracts/splitx_escrow/tests/: integration_test.rs
